--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -7,14 +7,13 @@
     color: #6c757d;
 }
 .shop {
-font-family: "Integral CF Regular", sans-serif;
+font-family: "Integral CF Regular", sans-serif ;
 font-weight: 700;
 font-style: Bold;
-font-size: 32px;
+font-size: 32px !important;
 line-height: 100%;
 letter-spacing: 0%;
 vertical-align: middle;
-
 }
 .navbar-nav {
     font-family: 'Satoshi', sans-serif;
@@ -26,7 +25,7 @@ vertical-align: middle;
 .navIconsHover:hover{
      transform: translateY(-5px);
 }
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .search-container {
         margin-top: 1rem;
         width: 100%;
@@ -50,6 +49,6 @@ vertical-align: middle;
         margin-top: -250px !important;
     }
     .shop{
-font-size: 25.2px;
+font-size: 25.2px !important;
     }
 }
